# prismxx

./: .gitignore  README.md  build.sh  checkpoint.toml  hardhat.config.js  package-lock.json  package.json
.openzeppelin/: unknown-1111.json  unknown-2152.json  unknown-31337.json  unknown-7890.json
compile/: PrismXXBridge.abi
contracts/: AssetTypeUtils.sol  GLDToken.sol  MyERC1155.sol  MyToken.sol  PrismProxy.sol  PrismXXAsset.sol  PrismXXBridge.sol  PrismXXBridgeCreator.sol  PrismXXLedger.sol  PrismXXProxy.sol  PrismXXProxyAdmin.sol  TestERC20.sol
contracts/demo/: CallLogic.sol  Logic.sol  Proxy.sol  ProxyAdmin.sol  admin.sol  logic.sol  proxy.sol  upgradeable.sol
contracts/examples/: PrismXXAsset.sol  PrismXXLedger.sol  Proxy.sol  ProxyAdmin.sol
contracts/interfaces/: IERC20Burnable.sol  IERC20Mintable.sol  IPrismXXAsset.sol  IPrismXXLedger.sol
doc/: deployAndUsage.md
prismxx/: Cargo.toml
prismxx/src/: command.rs  deploy.rs  main.rs
prismxx/src/utils/: contract.rs
scripts/: address_utils.js  deploy.js  deploy_erc20.js  deploy_tokens.js  display_erc1155.js  display_erc20.js  display_erc721.js  erc1155.js  erc20.js  erc721.js  fra.js  grant-pauseable.js  libdeploy.js  pause.js  show_prism.js  test_delete.js  upgrade_prism_ledger.js
test/: prism.js
typechain-types/: hardhat.d.ts  index.ts
typechain-types/contracts/: AssetTypeUtils.ts  GLDToken.ts  MyERC1155.ts  MyToken.ts  PrismXXBridge.ts  index.ts
typechain-types/contracts/examples/: PrismXXAsset.ts  PrismXXLedger.ts  index.ts
typechain-types/contracts/interfaces/: IERC20Burnable.ts  index.ts  (+3 more)
(+34 files in other folders)
