[package]
name = "prismxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.21.0"

clap = { version = "3.1", features = ["derive"] }
web3 = "0.18.0"
tokio = { version = "1.17.0", features = ["full"] }

anyhow = "1.0"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
hex = "0.4.3"

